tests/baselines/reference/reachabilityChecks3.errors.txt
tests/cases/compiler/reachabilityChecks3.ts(3,1): error TS7028: Unused label.
tests/cases/compiler/reachabilityChecks3.ts(12,5): error TS7028: Unused label.
tests/cases/compiler/reachabilityChecks3.ts(15,17): error TS7028: Unused label.


==== tests/cases/compiler/reachabilityChecks3.ts (3 errors) ====
    
    let x = 1;
    loop: while (true) {
    ~~~~
!!! error TS7028: Unused label.
        if (x == 100) {
            break;
        }
        else {
            x++;
        }
    }
    {
        x: 100
        ~
!!! error TS7028: Unused label.
    }
    
    var y = () => { f: 1 }
                    ~
!!! error TS7028: Unused label.